--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 
                 <table>
                     <tr>
-                        <td><a href="nextpage.html">contact</a></td>
+                        <td><a href="nextpage.html">Contact</a></td>
                         <td><a href="page2.html">About me</a></td>
                         <td><a href="finalpage.html">Click to see my humor</a></td>
                     </tr>
